[package]
name = "learn_rust"
version = "0.1.0"
authors = ["xyuanbuilds <1076849402@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sourcemap = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
